# libucrpc

./: Makefile.am  bootstrap.sh  configure.ac
include/rpc/: auth.h  auth_des.h  auth_unix.h  clnt.h  des_crypt.h  netdb.h  pmap_clnt.h  pmap_prot.h  pmap_rmt.h  rpc.h  rpc_msg.h  svc.h  svc_auth.h  types.h  xdr.h
src/: Makefile.am  auth_none.c  auth_unix.c  authunix_prot.c  bindresvport.c  clnt_generic.c  clnt_perror.c  clnt_simple.c  clnt_tcp.c  clnt_udp.c  clnt_unix.c  compat.h  create_xid.c  errqueue.h  getrpcent.c  getrpcport.c  pm_getport.c  pmap_clnt.c  pmap_prot.c  pmap_prot2.c  pmap_rmt.c  rcmd.c  rexec.c  rpc_cmsg.c  rpc_dtablesize.c  rpc_private.h  rpc_prot.c  rpc_thread.c  rtime.c  ruserpass.c  sa_len.c  svc.c  svc_auth.c  svc_run.c  svc_tcp.c  svc_udp.c  svc_unix.c  xdr.c  xdr_array.c  xdr_intXX_t.c  (+4 more)
