SUBDIRS = src

ACLOCAL_AMFLAGS = -I m4

rpcincludedir = $(includedir)/rpc

rpcinclude_HEADERS = \
	include/rpc/auth_des.h \
	include/rpc/auth.h \
	include/rpc/auth_unix.h \
	include/rpc/clnt.h \
	include/rpc/des_crypt.h \
	include/rpc/key_prot.h \
	include/rpc/netdb.h \
	include/rpc/pmap_clnt.h \
	include/rpc/pmap_prot.h \
	include/rpc/pmap_rmt.h \
	include/rpc/rpc_des.h \
	include/rpc/rpc.h \
	include/rpc/rpc_msg.h \
	include/rpc/svc_auth.h \
	include/rpc/svc.h \
	include/rpc/types.h \
	include/rpc/xdr.h
